--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   geolocator: ^8.1.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
@@ -59,17 +60,17 @@ flutter:
   uses-material-design: true
 
   
-assets:
-  - images/
+  assets:
+    - images/
 
-fonts:
-  - family: Spartan MB
-    fonts:
-    - asset: fonts/SpartanMB-Black.otf
-      weight: 900
+  fonts:
+    - family: Spartan MB
+      fonts:
+      - asset: fonts/SpartanMB-Black.otf
+        weight: 900
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+  #   - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
